logs/microblog.log
2024-04-03 18:32:43,892 ERROR: Exception on /blogpost [GET] [in /Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/app.py:828]
Traceback (most recent call last):
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/app.py", line 1463, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/app.py", line 872, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/app.py", line 870, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/app.py", line 855, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask_login/utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/website/views/views.py", line 112, in blogpost
    return render_template('blogpost.html', post_form=post_form, comment_form=comment_form,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 137, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/Users/apple/ProjectBackups/Flask_Packages/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/Users/apple/ProjectBackups/Flask_Packages/website/templates/blogpost.html", line 147, in template
    {% endfor %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endfor'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2024-04-03 18:33:01,262 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 18:36:20,125 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 18:46:06,900 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 18:53:10,012 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 18:53:27,047 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 21:26:17,974 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-04-03 21:39:34,347 INFO: Microblog startup [in /Users/apple/ProjectBackups/Flask_Packages/website/__init__.py:89]
2024-05-10 17:29:46,885 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-10 17:33:20,093 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-10 20:12:36,470 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-10 20:12:56,040 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-10 21:00:56,828 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-10 21:29:10,244 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-13 12:51:35,792 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:11:01,929 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:30:49,353 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:31:26,540 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:32:42,465 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:33:09,013 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:38:05,886 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:40:16,113 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 22:42:23,399 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 23:18:42,361 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-05-31 23:20:39,790 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-01 22:13:24,467 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-03 12:15:21,466 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-11 22:34:36,701 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-11 22:37:36,520 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-11 22:44:47,631 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
2024-06-30 20:45:13,592 INFO: Microblog startup [in /Users/apple/100DayPython/FlaskBlogComplete/website/__init__.py:89]
